src/objects/DebitMemo__c.object
<CustomObject>
    <description>Debit memos that you issued to your customers to increase the amount your customers owned you.</description>
    <fields>
        <fullName>Balance__c</fullName>
        <description>Only visible for debit memos. The total amount that your customer owes to you for this memo.</description>
        <inlineHelpText>Only visible for debit memos. The total amount that your customer owes to you for this memo.</inlineHelpText>
        <label>Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BillingAccount__c</fullName>
        <description>DAZN Billing Account object. An account is a customer account that collects all of the critical information about the customer, such as contact information, payment terms, and payment methods. You can use a customer account to track subscriptions, amendments, and transactions, such as invoices and payments.</description>
        <inlineHelpText>DAZN Billing Account object.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>CustomerAccount__c</referenceTo>
        <relationshipLabel>Debit Memos</relationshipLabel>
        <relationshipName>Debit_Memos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CancelledById__c</fullName>
        <label>Cancelled By Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelledOn__c</fullName>
        <label>Cancelled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>The note of the memo.</description>
        <inlineHelpText>The note of the memo.</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>The date when the invoice was created in the DAZN system.</description>
        <label>DAZN Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CurrencyFX__c</fullName>
        <label>Exchange Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the DAZN object ID, and is used as external ID for data synchronization between Salesforce and DAZN.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Debit Memos</relationshipLabel>
        <relationshipName>Debit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MemoDate__c</fullName>
        <description>The date when this memo is created. If the credit memo is created by bill runs, the memo date is the invoice date.</description>
        <inlineHelpText>The date when this memo is created. If the credit memo is created by bill runs, the memo date is the invoice date.</inlineHelpText>
        <label>Debit Memo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PostedByID__c</fullName>
        <label>Posted By ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostedOn__c</fullName>
        <label>Posted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReasonCode__c</fullName>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetDate__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <description>The total tax amount of this memo.</description>
        <inlineHelpText>The total tax amount of this memo.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmountWithoutTax__c</fullName>
        <label>Total Amount Without Tax</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <description>The total amount of this memo.</description>
        <inlineHelpText>The total amount of this memo.</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalTaxExemptAmount__c</fullName>
        <label>Total Tax Exempt Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransferredToAccounting__c</fullName>
        <label>Transferred To Accounting</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedDate__c</fullName>
        <description>The date when the invoice was updated in the DAZN system.</description>
        <label>DAZN Updated Date</label>
        <type>DateTime</type>
    </fields>
    <label>DAZN Debit Memo</label>
    <nameField>
        <label>Debit Memo Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DAZN Debit Memos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>